oops haven't comit in a while

--- a/config.yml
+++ b/config.yml
@@ -10,3 +10,78 @@ db:
 items_per_page: 20
 
 secret_key: "change this later"
+
+# KEEP THIS IN SYNC WITH THE GAME OR YOU WILL NOT BE ABLE TO EDIT BANS TO NEW ROLES IN GAME
+roles: [
+  "Captain",
+  "Head of Personnel",
+  "Head of Security",
+  "Chief Engineer",
+  "Research Director",
+  "Chief Medical Officer",
+  "Assistant",
+  "Quartermaster",
+  "Cargo Technician",
+  "Shaft Miner",
+  "Bartender",
+  "Cook",
+  "Botanist",
+  "Janitor",
+  "Clown",
+  "Mime",
+  "Curator",
+  "Lawyer",
+  "Chaplain",
+  "Station Engineer",
+  "Atmospheric Technician",
+  "Medical Doctor",
+  "Chemist",
+  "Geneticist",
+  "Virologist",
+  "Scientist",
+  "Roboticist",
+  "Warden",
+  "Detective",
+  "Security Officer",
+  "AI",
+  "Cyborg",
+  "Server",
+  "Syndicate",
+  "Traitor",
+  "Operative",
+  "Changeling",
+  "Wizard",
+  "Malf AI",
+  "Revolutionary",
+  "Head Revolutionary",
+  "Xenomorph",
+  "pAI",
+  "Cultist",
+  "Blob",
+  "Space Ninja",
+  "Monkey",
+  "Abductor",
+  "Revenant",
+  "Devil",
+  "Servant of Ratvar",
+  "Blood Brother",
+  "Brainwashed Victim",
+  "Syndicate Mutineer",
+  "Hivemind Host",
+  "Obsessed",
+  "Sentience Potion Spawn",
+  "Mind Transfer Potion",
+  "Posibrain",
+  "Drone",
+  "Deathsquad",
+  "Lavaland",
+  "Internal Affairs Agent",
+  "Fugitive",
+  "Shadowling",
+  "Vampire",
+  "Battle Royale Contestant",
+  "gangster",
+  "darkspawn",
+  "Holoparasite",
+  "Zombie"
+]
