skeleton of book edit page

--- a/config.yml
+++ b/config.yml
@@ -101,3 +101,13 @@ roles: [
   "Holoparasite",
   "Zombie"
 ]
+
+library:
+  categories: [
+    "Any",
+    "Fiction",
+    "Non-Fiction",
+    "Adult",
+    "Reference",
+    "Religion"
+  ]
