remove the correct line this time

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,11 +6,10 @@ module = %(app)
 
 chdir = /srv/www/yogsite
 
+socket = /srv/www/yogsite/%n.sock
 chmod-socket = 666
 
 callable = app
-
-logto = /var/log/uwsgi/%n.log
 
 processes = 2
 
