--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,10 @@ servers:
 logs:
   directory: "../Yogstation/data/logs/*/*/*"
 
+links:
+  forums: "https://forums.yogstation.net/"
+  wiki: "https://wiki.yogstation.net/"
+
 secret_key: $FLASK_SECRET_KEY
 
 # KEEP THIS IN SYNC WITH THE GAME OR YOU WILL NOT BE ABLE TO EDIT BANS TO NEW ROLES IN GAME
