--- a/config.yml
+++ b/config.yml
@@ -30,6 +30,8 @@ links:
 
 secret_key: $FLASK_SECRET_KEY
 
+xenforo_key: $XENFORO_AUTH_KEY
+
 # KEEP THIS IN SYNC WITH THE GAME OR YOU WILL NOT BE ABLE TO EDIT BANS TO NEW ROLES IN GAME
 roles: [
   "Captain",
