--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cachetools==4.1.1
+envyaml==0.2060
 Flask==1.1.1
-flask-login==0.5.0
 flask-perm==0.2.8
 flask_sqlalchemy==2.4.4
 flask-wtf==0.14.3
@@ -8,6 +8,6 @@ humanize==2.5.0
 mysqlclient==2.0.1
 netaddr==0.8.0
 pymysql==0.9.3
-envyaml==0.2060
+requests==2.24.0
 sqlalchemy==1.3.18
 werkzeug==1.0.1
