--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+baseurl: "https://dev.yogstation.net"
+
 db:
   game:
     host: $DB_GAME_HOST
@@ -119,3 +121,11 @@ xenforo:
     host: 43
     council: 8
     headcoder: 30
+
+paypal:
+  form_url: "https://sandbox.paypal.com/cgi-bin/webscr"
+  email: "PayPal@yogstation.net"
+  item_name: "Donation to Yogstation" # Description of what people are paying for when they donate
+  currency_code: "USD"
+  return_url: "/donate?confirm=1"
+  notify_url: "/api/paypal_donate"
