--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ humanize==2.5.0
 mysqlclient==2.0.1
 netaddr==0.8.0
 pymysql==0.9.3
+python-dateutil==2.8.1
 requests==2.24.0
 sqlalchemy==1.3.18
 werkzeug==1.0.1
