--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,9 @@ server {
     client_max_body_size 75M;
 
     add_header X-Frame-Options "SAMEORIGIN";
+	
+    real_ip_header X-Forwarded-For;
+    set_real_ip_from 10.0.0.0/8;
 
     location / {
 		try_files $uri @yogsite;
