paypal is stupid

--- a/config.yml
+++ b/config.yml
@@ -124,7 +124,7 @@ xenforo:
     headcoder: 30
 
 paypal:
-  form_url: "https://paypal.com/cgi-bin/webscr"
+  form_url: "https://www.paypal.com/cgi-bin/webscr"
   ipn_url: "https://ipnpb.paypal.com/cgi-bin/webscr"
   email: "PayPal@yogstation.net"
   item_name: "Donation to Yogstation" # Description of what people are paying for when they donate
