Adds a redirect because it fucks with the cookie

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,12 @@
 server {
+    server_name www.yogstation.net;
+    listen 80;
+	
+    return 301 https://yogstation.net$request_uri;
+}
+
+server {
+    server_name yogstation.net;
     listen 80;
 
     charset utf-8;
