--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,51 @@
-server {
-    server_name www.yogstation.net;
-    listen 80;
-	
-    return 301 https://yogstation.net$request_uri;
+user  nginx;
+worker_processes 1;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+events {
+ 	worker_connections 1024;
 }
+http {
+	include       /etc/nginx/mime.types;
+	default_type  application/octet-stream;
+	log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+		      '$status $body_bytes_sent "$http_referer" '
+		      '"$http_user_agent" "$http_x_forwarded_for"';
+	access_log  /var/log/nginx/access.log  main;
+	sendfile        on;
+	keepalive_timeout  65;
+	daemon off;
 
-server {
-    server_name yogstation.net;
-    listen 80;
+	server {
+	    server_name www.yogstation.net;
+	    listen 80;
 
-    charset utf-8;
-    client_max_body_size 75M;
-
-    add_header X-Frame-Options "SAMEORIGIN";
-	
-    real_ip_header X-Forwarded-For;
-    set_real_ip_from 10.0.0.0/8;
-
-    location / {
-		try_files $uri @yogsite;
+	    return 301 https://yogstation.net$request_uri;
 	}
 
-    location @yogsite {
-        include uwsgi_params;
-        uwsgi_pass unix:/srv/www/yogsite/uwsgi.sock;
-    }
+	server {
+	    server_name yogstation.net;
+	    listen 80;
 
-    location /static {
-        root /srv/www/yogsite/yogsite/static;
-    }
+	    charset utf-8;
+	    client_max_body_size 75M;
+
+	    add_header X-Frame-Options "SAMEORIGIN";
+
+	    real_ip_header X-Forwarded-For;
+	    set_real_ip_from 10.0.0.0/8;
+
+	    location / {
+			try_files $uri @yogsite;
+		}
+
+	    location @yogsite {
+		include uwsgi_params;
+		uwsgi_pass unix:/srv/www/yogsite/uwsgi.sock;
+	    }
+
+	    location /static {
+		root /srv/www/yogsite/yogsite/static;
+	    }
+	}
 }
