Maybe fixes Alexkars static problem

--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ http {
 		}
 
 		location /static {
-			root /srv/www/yogsite/yogsite/static;
+			alias /srv/www/yogsite/yogsite/static;
 		}
 	}
 }
