Cache static content

--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,8 @@ http {
 
 		location /static {
 			alias /srv/www/yogsite/yogsite/static;
+			
+			add_header 'Cache-Control' 'public, max-age 360, stale-while-revalidate 3600, proxy-revalidate';
 		}
 	}
 }
