--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,30 @@ python-dateutil==2.8.1
 requests==2.24.0
 sqlalchemy==1.3.18
 werkzeug==1.0.1
+cachetools==4.1.1
+envyaml==0.2060
+Flask==1.1.1
+Flask-Limiter==1.4
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+humanize==2.5.0
+mysqlclient==2.0.1
+netaddr==0.8.0
+PyMySQL==0.9.3
+python-dateutil==2.8.1
+requests==2.24.0
+SQLAlchemy==1.3.18
+Werkzeug==1.0.1
+## The following requirements were added by pip freeze:
+certifi==2021.10.8
+chardet==3.0.4
+click==8.1.2
+idna==2.10
+itsdangerous==2.1.2
+Jinja2==3.0.3
+limits==2.4.0
+MarkupSafe==2.1.1
+PyYAML==6.0
+six==1.16.0
+urllib3==1.25.11
+WTForms==3.0.1
